test/invalid/InvalidReturnSuperType/SuperType.plume

/**
 * 
 * @author 37029, Juliana Franco
 *
 */
abstract class SuperType extends Object is

